data/derived/comb/progs/unify/prog3732.ml.out
Characters 127-153:
  let (_, res) = List.fold_left f base args in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type 'c * 'd
